fix:完善数据分析逻辑